# schnelltesttest.de

./: .eslintrc.json  .gitignore  CODE_OF_CONDUCT.md  README.md  package-lock.json  package.json
.github/: FUNDING.yml
.github/workflows/: deploy.yml
.husky/: pre-commit
data/: all.csv  all.json  convert.py  failed.csv  passed.csv  passed.json
public/: .htaccess  index.html  manifest.json
public/.well-known/: security.txt
public/fonts/: open-sans-condensed-v15-latin-300.eot  open-sans-condensed-v15-latin-300italic.eot  open-sans-condensed-v15-latin-700.eot  open-sans-v27-latin-500.eot  open-sans-v27-latin-500italic.eot
scripts/: diff_locale_keys.sh  gitInfo.js
src/: App.css  App.tsx  font.css  index.css  index.tsx  service-worker.ts  serviceWorkerRegistration.ts
src/components/: Buttons.tsx  ContactInfo.tsx  HeadingPageLayouts.tsx  LanguageSwitch.tsx  LinkFooter.tsx  Localization.tsx  Logo.tsx  LogoHeader.tsx  LogoHeadingPage.tsx  TextHeader.tsx  TextHeadingPage.tsx  languageNameMap.ts
src/components/Result/: NoTestFound.tsx  ResultIcon.tsx  TestFound.tsx  TestFoundButLegalThreats.tsx  TestFoundButNoData.tsx
src/components/Scanner/: BarcodeScanner.tsx  (+4 more)
src/data/: all.csv  all.json  convert.py  ean_map.json  failed.csv  failed.json  manual_map.json  merge.py  passed.csv  passed.json  pyproject.toml  pzn_map.json  reformat.py  sheet2map.py  xlsx2all.py
src/locale/: de.json  en.json
src/routes/: About.tsx  EnterCode.css  EnterCode.tsx  MoreInformation.tsx  Result.tsx  Scanner.css  Scanner.tsx
src/utils/: hooks.tsx  testdata.test.ts  testdata.ts
